--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -10,7 +10,7 @@ body {
 	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
+} */
 
 a {
 	color: rgb(0,100,200);
@@ -73,6 +73,7 @@ button:focus {
   body {
 	margin: 0;
 	padding: 0;
+	top: 0;
 	font-family: Arial, Helvetica, sans-serif;
 	scroll-behavior: smooth;
   }
